fixed org mode screenshot in readme

--- a/Readme.org
+++ b/Readme.org
@@ -8,4 +8,4 @@ Emacs Theme based on the colors proposed by the [[http://www.google.com/design/s
 [[./material-theme.png]]
 
 ** Org mode
-[[file:org-mode-demo.png][org mode]]
+[[./org-mode-demo.png]]
