improved rainbow-delimiters and added screenshot

--- a/Readme.org
+++ b/Readme.org
@@ -14,5 +14,8 @@ Emacs Theme based on the colors proposed by the [[http://www.google.com/design/s
 ** Org mode
 [[./org-mode-demo.png]]
 
+** Rainbow Delimiters
+[[./rainbow-delimiters.png]]
+
 ** Ace-window
 [[./ace-window.png]]
