--- a/Readme.org
+++ b/Readme.org
@@ -1,6 +1,7 @@
 * Material Theme for Emacs
 [[https://github.com/cpaulik/emacs-material-theme/blob/master/LICENSE.txt][file:https://img.shields.io/badge/license-MIT-green.svg]]
 [[http://melpa.org/#/material-theme][file:http://melpa.org/packages/material-theme-badge.svg]]
+file:https://stable.melpa.org/packages/material-theme-badge.svg
 
 Emacs Theme based on the colors proposed by the [[http://www.google.com/design/spec/style/color.html#color-color-palette][Google Material Design]].
 
